--- a/index.html
+++ b/index.html
@@ -295,5 +295,28 @@ const downtimeEl = document.getElementById("downtime");
 const recommendationsEl = document.getElementById("recommendations");
 </script>
 
+<script>
+  let heightTimeout;
+
+  function sendHeight() {
+    clearTimeout(heightTimeout);
+    heightTimeout = setTimeout(() => {
+      const height = document.documentElement.scrollHeight;
+      window.parent.postMessage({ height }, "*");
+    }, 50);
+  }
+
+  window.addEventListener("load", sendHeight);
+  window.addEventListener("resize", sendHeight);
+
+  const observer = new MutationObserver(sendHeight);
+  observer.observe(document.body, {
+    childList: true,
+    subtree: true,
+    attributes: true
+  });
+</script>
+
 </body>
 </html>
+
